--- a/src/app/pages/availabletechnician/availabletechnician.component.html
+++ b/src/app/pages/availabletechnician/availabletechnician.component.html
@@ -21,8 +21,8 @@
         <nav class="breadcrumbNav">
             <ul >
                 
-                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a href="#">View Request</a></li>
-                <li class = "" id = "breadcrumbpadding"><a href="#">View Progress</a></li>
+                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a href="#" id="hover">View Request</a></li>
+                <li class = "" id = "breadcrumbpadding"><a href="#" id="hover">View Progress</a></li>
 
 
                 
@@ -35,7 +35,7 @@
             <form class="backFrom">
                 <div class = "contentForm">
 
-                    <h3 class = "toptitle">Admin View technicians</h3>
+                    <h3 class = "toptitle">Admin Available technicians</h3>
 
                     <div class = "Cards">
 
