--- a/src/app/pages/track-request/track-request.component.html
+++ b/src/app/pages/track-request/track-request.component.html
@@ -6,7 +6,7 @@
   
             <!--Start of logo -->
             <h1 class="navbar-brand" routerLink=""><img class ="logo" src="/assets/images/tutLogo.png"> </h1> 
-            <img class="toggleMenu" src="/assets/images/icons8-menu.svg">
+            <img class="toggleMenu" src="/assets/images/icons8-menu.svg" width="80">
     
             <!--End of logo-->
       </div>
@@ -21,8 +21,8 @@
         <nav class="breadcrumbNav">
             <ul >
    
-                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a  class ="paddingtext" id="hover" href="#">Tracking</a></li>
-                <li class = "" id = "breadcrumbpadding"><a id="hover" href="#">Feedback</a></li>
+                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a  class ="anchorBorder" id="hover" href="#">Tracking</a></li>
+                <li class = "" id = "breadcrumbpadding"><a class ="anchorBorder" id="hover" href="#">Feedback</a></li>
                 
                 
             </ul>
@@ -49,20 +49,8 @@
 
                 </div>
 
-
-
-                <div>
-                    <div class="inprogress">
-
-                    </div>
-                    <div  class="inprogress">
-                        
-                    </div>
-                </div>
             </form>
     </div>
 
-    
-    
 </body>
 
