--- a/src/app/pages/adminviewsinglerequest/adminviewsinglerequest.component.css
+++ b/src/app/pages/adminviewsinglerequest/adminviewsinglerequest.component.css
@@ -86,12 +86,16 @@ body {
    
     
     border-bottom: 3px solid #005596;
-    width: 95px;
+    width: 115px;
     padding-left: 0;
     
 }
 
-
+#hover:hover {
+    font-weight: bold;
+   
+   
+}
 .contentContainerRight {
     
     width:1562px;
