--- a/helpdeskk/src/app/staffpage/staffpage.component.css
+++ b/helpdeskk/src/app/staffpage/staffpage.component.css
@@ -108,7 +108,7 @@
       padding: 8px;
       color: #eee;
       display: center;
-      position: absolute;
+     
       bottom: 0;
       width: 100%;
   }
@@ -209,8 +209,27 @@
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
   
+  select{
+    margin: 0 5px;
+  }
   
   select#Cater,
+  input.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin-bottom: 1rem;
+  }
+
+  select#Cater1,
   input.form-control {
     display: block;
     width: 100%;
