--- a/helpdeskk/src/app/staffpage/staffpage.component.html
+++ b/helpdeskk/src/app/staffpage/staffpage.component.html
@@ -66,42 +66,47 @@
                     <div class="reqhead1">SEND REQUEST</div>
 
                     <label class="d-block mb-4">
-                        <span class="form-label d-block">Description</span>
+                        <br>
+                        <span class="form-label d-block"><h4>Description</h4></span>
                         <textarea class="form-control" rows="3" [(ngModel)]="requestform.description"
                             name="requestform.description" placeholder="Please describe your problem"></textarea>
                     </label>
 
                     <label class="Cater" for="Cater">
 
-                        Catergory
-                        <br>
-                        <br>
+                      <h4>Catergory</h4>  
+                         
                         <select id="Cater" [(ngModel)]="requestform.category" name="requestform.category">
-                            <option value="select">Select Catergory</option>
+                            <option value="">Select Catergory</option>
                             <option value="Hardware">Hardware</option>
                             <option value="Hardware">Software</option>
                             <option value="Hardware">Electrical</option>
                         </select>
                     </label>
 
-                    <select (change)="buldingNoSelect($event)">
-                        <option value="">Select Building Number</option>
-                        <option *ngFor="let bld of bld_no" value="{{bld}}">{{bld}}</option>
-                    </select>
-                    <label class="d-block mb-4">
-                        <span class="form-label d-block">Venue</span>
-                        <input type="text" [(ngModel)]="requestform.venue" name="requestform.venue" class="form-control"
-                            placeholder="joe.bloggs@example.com" />
-                    </label>
+                    <div class="form-group">
+                        <br>
+                        <select (change)="buldingNoSelect($event)" class="form-control mb-2 mr-sm-2">
+                            <option value="">Select Building Number</option>
+                            <option *ngFor="let bld of bld_no" value="{{bld}}">{{bld}}</option>
+                        </select>
+                        <br>
+                        <select (change)="getVunueSelected($event)" class="form-control mb-2 mr-sm-2">
+                            <option value="">---Select Vanue---</option>
+                            <option *ngFor="let vanue of selectedBuilding" value="{{vanue.v}}">{{vanue.v}}</option>
+                        </select>
+                    </div>
 
-                    <label for="formFileDisabled" class="form-label input-group"><span>Image</span>
+                   
+
+                    <label for="formFileDisabled" class="form-label input-group"><span><h4>Image</h4></span>
 
                         <input class="form-control" [(ngModel)]="requestform.Image" name="requestform.Image" type="file"
                             id="formFileDisabled" />
                     </label>
 
                     <label class="d-block mb-4">
-                        <span class="form-label d-block">Staff Number</span>
+                        <span class="form-label d-block"><h4>Staff Number</h4></span>
                         <input type="text" class="form-control" placeholder="235578933"
                             [(ngModel)]="requestform.staff_id" name="requestform.staff_id" name="requestform.venue" />
                     </label>
